# api/docs/swagger.json
@@ -131,7 +131,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/book_service.Book"
+                                            "$ref": "#/definitions/book_service.CreateBookResponse"
                                         }
                                     }
                                 }
@@ -933,9 +933,6 @@
         "auth_service.User": {
             "type": "object",
             "properties": {
-                "created_at": {
-                    "type": "string"
-                },
                 "email": {
                     "type": "string"
                 },
@@ -949,9 +946,6 @@
                     "type": "string"
                 },
                 "secret": {
-                    "type": "string"
-                },
-                "updated_at": {
                     "type": "string"
                 }
             }
@@ -979,9 +973,6 @@
                 "cover": {
                     "type": "string"
                 },
-                "created_at": {
-                    "type": "string"
-                },
                 "id": {
                     "type": "string"
                 },
@@ -1000,9 +991,17 @@
                 },
                 "title": {
                     "type": "string"
+                }
+            }
+        },
+        "book_service.BookData": {
+            "type": "object",
+            "properties": {
+                "book": {
+                    "$ref": "#/definitions/book_service.Book"
                 },
-                "updated_at": {
-                    "type": "string"
+                "status": {
+                    "type": "integer"
                 }
             }
         },
@@ -1023,26 +1022,24 @@
         "book_service.CreateBook": {
             "type": "object",
             "properties": {
-                "author": {
-                    "type": "string"
-                },
-                "cover": {
-                    "type": "string"
-                },
                 "isbn": {
                     "type": "string"
+                }
+            }
+        },
+        "book_service.CreateBookResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/book_service.BookData"
+                    }
                 },
-                "pages": {
-                    "type": "integer"
+                "is_ok": {
+                    "type": "boolean"
                 },
-                "published": {
-                    "type": "string"
-                },
-                "status": {
-                    "description": "0-new, 1-reading, 2-finished,",
-                    "type": "integer"
-                },
-                "title": {
+                "message": {
                     "type": "string"
                 }
             }
